devel
-----

* added startup option `--query.tracking-with-bindvars` 

  This option controls whether the list of currently running queries
  and the list of slow queries should contain the bind variables used
  in the queries or not.

  The option can be changed at runtime using the commands

      // enables tracking of bind variables
      // set to false to turn tracking of bind variables off
      var value = true; 
      require("@arangodb/aql/queries").properties({ 
        trackBindVars: value 
      });

* selectivity estimates are now available in the cluster

* fixed issue #2943: loadIndexesIntoMemory not returning the same structure 
  as the rest of the collection APIs

* fixed isuse #2949: ArangoError 1208: illegal name

* fixed issue #2874: Collection properties do not return `isVolatile` 
  attribute

* potential fix for issue #2939: Segmentation fault when starting 
  coordinator node  

* fixed issue #2810: out of memory error when running UPDATE/REPLACE 
  on medium-size collection

* fix potential deadlock errors in collector thread

* disallow the usage of volatile collections in the RocksDB engine 
  by throwing an error when a collection is created with attribute 
  `isVolatile` set to `true`. 
  Volatile collections are unsupported by the RocksDB engine, so 
  creating them should not succeed and silently create a non-volatile
  collection 

* prevent V8 from issuing SIGILL instructions when it runs out of memory

  Now arangod will attempt to log a FATAL error into its logfile in case V8 
  runs out of memory. In case V8 runs out of memory, it will still terminate the 
  entire process. But at least there should be something in the ArangoDB logs 
  indicating what the problem was. Apart from that, the arangod process should
  now be exited with SIGABRT rather than SIGILL as it shouldn't return into the 
  V8 code that aborted the process with `__builtin_trap`.
